# history-api

./: .coverage  .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: getting-started.md  how-to-use.md  index.md  language.md
docs/API/Curiosity/: curiosity.md  curiosity_month.md  curiosity_month_day.md
docs/API/Events/: events.md  events_month.md  events_month_day.md
docs/API/Presidents/: presidents.md  presidents_id.md  presidents_location.md  presidents_name.md  presidents_range_id.md
history_api/: curiosity.py  curiosity_month.py  curiosity_month_day.py  events.py  events_month.py  events_month_day.py  presidents.py  presidents_id.py  presidents_location.py  presidents_name.py  presidents_range_id.py
history_api/data/curiosity/: curiosity-ar.json  curiosity-cs.json  curiosity-de.json  curiosity-es.json  curiosity-fr.json  curiosity-hi.json  curiosity-id.json  curiosity-it.json  curiosity-ja.json  curiosity-ko.json  curiosity-pl.json  curiosity-ru.json  curiosity-tr.json  curiosity-uk.json  curiosity-vi.json  curiosity-zh.json
history_api/data/events/: events-ar.json  events-cs.json  events-de.json  events-en.json  events-es.json  events-fr.json  events-hi.json  events-id.json  events-it.json  events-ja.json  events-ko.json  (+7 more)
history_api/plugins/: languages.py
tests/: test_curiosity.py  test_curiosity_month.py  test_curiosity_month_day.py  test_events.py  test_events_month.py  test_events_month_day.py  test_presidents.py  test_presidents_id.py  test_presidents_location.py  test_presidents_name.py  test_presidents_range_id.py
(+18 files in other folders)
